--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "12.0.2",
+    "postcss-import": "^14.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.4"
@@ -16,8 +17,11 @@
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
+    "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
   }
 }
