--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.3.0",
     "next": "12.0.2",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
